test/spec_vectors/simd_i16x8_cmp/fail/module_31.wat
(module (func $i16x8.ge_u-arg-empty (result v128) (i16x8.ge_u)))